[tool.poetry]
name = "m2ds-data-stream"
version = "0.1.0"
description = ""
authors = ["Baptiste Pasquier <pasquierbaptiste@hotmail.fr>"]
readme = "README.md"
packages = [{include = "m2ds_data_stream"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
river = "^0.14.0"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = {extras = ["jupyter"], version = "^22.10.0"}
ipykernel = "^6.17.1"
ipywidgets = ">=7.0,<8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
